kuberentes/kubernetes-documents/.Configuration/Nginx Default Page/deployment.yaml
## deployment.yaml ##

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: webapp         ## 여기서 skills을 하고 배포를 하면 fargate으로 생성됨. 
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
