kuberentes/kubernetes-documents/.Configuration/Nginx Default Page/service.yaml
## Service.yaml ##

apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: webapp 
spec:
  type: NodePort 
  selector:
    app: nginx
  ports:
    - port: 80 # 서비스가 생성할 포트  
      targetPort: 80 # 서비스가 접근할 pod의 포트
      protocol: TCP
